[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                    # error handling
bytes = "1.3.0"                                      # helps manage buffers
clap = { version = "4.5.40", features = ["derive"] }
flate2 = "1.0.34"                                    # compression
hex = "0.4.3"
reqwest = { version = "0.12", features = ["blocking"] }
sha1 = "0.10.6"
thiserror = "1.0.38"                                 # error handling
url = "2.5.4"
once_cell = "1.19"
libp2p = { version = "0.53", features = [
    "tcp",
    "tokio",
    "mdns",
    "noise",
    "yamux",
    "request-response",
    "macros" 
] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1.89"
mdns-sd = "0.13"
hostname = "0.3"
if-addrs = "0.15.0"
simple-mdns = { version = "0.6", features = ["sync"] }
searchlight = "0.3.2"
local-ip-address = "0.6.10"

